# h4ck1ng_cl1_agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
copilot/: .gitignore  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.base.json
copilot/apps/cli/: package.json
copilot/apps/cli/src/: interactive.ts  main.ts  paths.ts
copilot/docs/agents/: exploit.md  ig.md  index.md  obj.md  post.md  prep.md  report.md  team-lead.md  vuln.md
knowledge/: README.md  tactics_stub.md
mock/: cursor_terminals_mock.html  serve_mock.py
openclaw-main/extensions/matrix/src/: channel.ts
scripts/: copilot-up.sh
src/pentest_copilot/: __init__.py  __main__.py  banner.py  boot_stdio.py  cli.py  config.py  context.py  context_compact.py  env_defaults.py  extract.py  extractors.py  host.py  jobs.py  kali_mcp_boot.py  kali_mcp_persistent.py  kali_tools_mcp.py  kali_tools_openrouter.py  knowledge.py  llm.py  mcp_persistent_client.py  memory.py  openrouter_check.py  preflight.py  prompts.py  runner.py  scope_facts.py  security_framework_mcp.py  security_tools_openrouter.py  session.py  session_scope.py  shell_detect.py  startup_intro.py  terminal_spawn.py  textutils.py  tmux_capture.py  todo.py  ui_mode.py  ui_scrollback.py
src/pentest_copilot/mcp/: __init__.py  kali_mcp_boot.py  kali_mcp_persistent.py  kali_tools_mcp.py  kali_tools_openrouter.py  security_framework_mcp.py  security_tools_openrouter.py  tool_trace.py
src/pentest_copilot/repl/: __init__.py  prompt_menus.py  repl_help.py  repl_prompt.py  tui_panes.py
(+2 files in other folders)
